First commited as before_65219_rev1